src/main/java/parser/PythonParser.java
// Generated from /home/wiktor/IdeaProjects/Optimizer/src/main/antlr4/Python.g4 by ANTLR 4.3
package parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PythonParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__16=1, T__15=2, T__14=3, T__13=4, T__12=5, T__11=6, T__10=7, T__9=8, 
		T__8=9, T__7=10, T__6=11, T__5=12, T__4=13, T__3=14, T__2=15, T__1=16, 
		T__0=17, AND=18, CLASS=19, DEF=20, ELSE=21, FALSE=22, IF=23, ELIF=24, 
		IS=25, INPUT=26, LAMBDA=27, NOT=28, OR=29, PRINT=30, RETURN=31, TRUE=32, 
		WHILE=33, ID=34, WS=35, NEWL=36, COMMENT=37, SL_COMMENT=38, INT=39, FLOAT=40, 
		STRING=41, EQ=42, NEQ=43, LT=44, GT=45, LE=46, GE=47;
	public static final String[] tokenNames = {
		"<INVALID>", "'/'", "':'", "'{'", "'['", "';'", "'**'", "'}'", "']'", 
		"'='", "'%'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'.'", "'and'", 
		"'class'", "'def'", "'else'", "'False'", "'if'", "'elif'", "'is'", "'input'", 
		"'lambda'", "'not'", "'or'", "'print'", "'return'", "'True'", "'while'", 
		"ID", "WS", "NEWL", "COMMENT", "SL_COMMENT", "INT", "FLOAT", "STRING", 
		"'=='", "'!='", "'<'", "'>'", "'<='", "'>='"
	};
	public static final int
		RULE_program = 0, RULE_module = 1, RULE_statement = 2, RULE_simple_statement = 3, 
		RULE_small_statement_list = 4, RULE_small_statement = 5, RULE_opt_semicolon = 6, 
		RULE_opt_comma = 7, RULE_compound_statement = 8, RULE_if_stmt = 9, RULE_while_stmt = 10, 
		RULE_funcdef = 11, RULE_classdef = 12, RULE_suite = 13, RULE_statement_list = 14, 
		RULE_target = 15, RULE_expression = 16, RULE_expr_list_comma = 17, RULE_expr_list = 18, 
		RULE_key_datum_list = 19, RULE_key_datum = 20, RULE_subscription = 21, 
		RULE_id_list = 22, RULE_lpar = 23, RULE_rpar = 24;
	public static final String[] ruleNames = {
		"program", "module", "statement", "simple_statement", "small_statement_list", 
		"small_statement", "opt_semicolon", "opt_comma", "compound_statement", 
		"if_stmt", "while_stmt", "funcdef", "classdef", "suite", "statement_list", 
		"target", "expression", "expr_list_comma", "expr_list", "key_datum_list", 
		"key_datum", "subscription", "id_list", "lpar", "rpar"
	};

	@Override
	public String getGrammarFileName() { return "Python.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PythonParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public ModuleContext module() {
			return getRuleContext(ModuleContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonVisitor ) return ((PythonVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50); module();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleContext extends ParserRuleContext {
		public TerminalNode NEWL(int i) {
			return getToken(PythonParser.NEWL, i);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public List<TerminalNode> NEWL() { return getTokens(PythonParser.NEWL); }
		public ModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonVisitor ) return ((PythonVisitor<? extends T>)visitor).visitModule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleContext module() throws RecognitionException {
		ModuleContext _localctx = new ModuleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_module);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__14) | (1L << T__13) | (1L << T__6) | (1L << T__3) | (1L << T__1) | (1L << CLASS) | (1L << DEF) | (1L << FALSE) | (1L << IF) | (1L << INPUT) | (1L << LAMBDA) | (1L << NOT) | (1L << PRINT) | (1L << RETURN) | (1L << TRUE) | (1L << WHILE) | (1L << ID) | (1L << NEWL) | (1L << INT) | (1L << FLOAT) | (1L << STRING))) != 0)) {
				{
				setState(54);
				switch (_input.LA(1)) {
				case T__14:
				case T__13:
				case T__6:
				case T__3:
				case T__1:
				case CLASS:
				case DEF:
				case FALSE:
				case IF:
				case INPUT:
				case LAMBDA:
				case NOT:
				case PRINT:
				case RETURN:
				case TRUE:
				case WHILE:
				case ID:
				case INT:
				case FLOAT:
				case STRING:
					{
					setState(52); statement();
					}
					break;
				case NEWL:
					{
					setState(53); match(NEWL);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Statement_1Context extends StatementContext {
		public Simple_statementContext simple_statement() {
			return getRuleContext(Simple_statementContext.class,0);
		}
		public Statement_1Context(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonVisitor ) return ((PythonVisitor<? extends T>)visitor).visitStatement_1(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Statement_2Context extends StatementContext {
		public Compound_statementContext compound_statement() {
			return getRuleContext(Compound_statementContext.class,0);
		}
		public Statement_2Context(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonVisitor ) return ((PythonVisitor<? extends T>)visitor).visitStatement_2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(61);
			switch (_input.LA(1)) {
			case T__14:
			case T__13:
			case T__6:
			case T__3:
			case T__1:
			case FALSE:
			case INPUT:
			case LAMBDA:
			case NOT:
			case PRINT:
			case RETURN:
			case TRUE:
			case ID:
			case INT:
			case FLOAT:
			case STRING:
				_localctx = new Statement_1Context(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(59); simple_statement();
				}
				break;
			case CLASS:
			case DEF:
			case IF:
			case WHILE:
				_localctx = new Statement_2Context(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(60); compound_statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Simple_statementContext extends ParserRuleContext {
		public TerminalNode NEWL(int i) {
			return getToken(PythonParser.NEWL, i);
		}
		public Small_statement_listContext small_statement_list() {
			return getRuleContext(Small_statement_listContext.class,0);
		}
		public List<TerminalNode> NEWL() { return getTokens(PythonParser.NEWL); }
		public Simple_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simple_statement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonVisitor ) return ((PythonVisitor<? extends T>)visitor).visitSimple_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Simple_statementContext simple_statement() throws RecognitionException {
		Simple_statementContext _localctx = new Simple_statementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_simple_statement);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(63); small_statement_list();
			setState(65);
			_la = _input.LA(1);
			if (_la==T__12) {
				{
				setState(64); match(T__12);
				}
			}

			setState(68); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(67); match(NEWL);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(70); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Small_statement_listContext extends ParserRuleContext {
		public List<Small_statementContext> small_statement() {
			return getRuleContexts(Small_statementContext.class);
		}
		public Small_statementContext small_statement(int i) {
			return getRuleContext(Small_statementContext.class,i);
		}
		public Small_statement_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_small_statement_list; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonVisitor ) return ((PythonVisitor<? extends T>)visitor).visitSmall_statement_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Small_statement_listContext small_statement_list() throws RecognitionException {
		Small_statement_listContext _localctx = new Small_statement_listContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_small_statement_list);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(72); small_statement();
			setState(77);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(73); match(T__12);
					setState(74); small_statement();
					}
					} 
				}
				setState(79);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Small_statementContext extends ParserRuleContext {
		public Small_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_small_statement; }
	 
		public Small_statementContext() { }
		public void copyFrom(Small_statementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Small_statement_1Context extends Small_statementContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Small_statement_1Context(Small_statementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonVisitor ) return ((PythonVisitor<? extends T>)visitor).visitSmall_statement_1(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Small_statement_2Context extends Small_statementContext {
		public TargetContext target() {
			return getRuleContext(TargetContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Small_statement_2Context(Small_statementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonVisitor ) return ((PythonVisitor<? extends T>)visitor).visitSmall_statement_2(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Small_statement_3Context extends Small_statementContext {
		public TerminalNode PRINT() { return getToken(PythonParser.PRINT, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Small_statement_3Context(Small_statementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonVisitor ) return ((PythonVisitor<? extends T>)visitor).visitSmall_statement_3(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Small_statement_4Context extends Small_statementContext {
		public TerminalNode RETURN() { return getToken(PythonParser.RETURN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Small_statement_4Context(Small_statementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonVisitor ) return ((PythonVisitor<? extends T>)visitor).visitSmall_statement_4(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Small_statementContext small_statement() throws RecognitionException {
		Small_statementContext _localctx = new Small_statementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_small_statement);
		try {
			setState(89);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new Small_statement_1Context(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(80); expression(0);
				}
				break;

			case 2:
				_localctx = new Small_statement_2Context(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(81); target();
				setState(82); match(T__8);
				setState(83); expression(0);
				}
				break;

			case 3:
				_localctx = new Small_statement_3Context(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(85); match(PRINT);
				setState(86); expression(0);
				}
				break;

			case 4:
				_localctx = new Small_statement_4Context(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(87); match(RETURN);
				setState(88); expression(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Opt_semicolonContext extends ParserRuleContext {
		public Opt_semicolonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_opt_semicolon; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonVisitor ) return ((PythonVisitor<? extends T>)visitor).visitOpt_semicolon(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Opt_semicolonContext opt_semicolon() throws RecognitionException {
		Opt_semicolonContext _localctx = new Opt_semicolonContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_opt_semicolon);
		try {
			setState(93);
			switch (_input.LA(1)) {
			case EOF:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 2);
				{
				setState(92); match(T__12);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Opt_commaContext extends ParserRuleContext {
		public Opt_commaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_opt_comma; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonVisitor ) return ((PythonVisitor<? extends T>)visitor).visitOpt_comma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Opt_commaContext opt_comma() throws RecognitionException {
		Opt_commaContext _localctx = new Opt_commaContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_opt_comma);
		try {
			setState(97);
			switch (_input.LA(1)) {
			case T__9:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				setState(96); match(T__2);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Compound_statementContext extends ParserRuleContext {
		public Compound_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compound_statement; }
	 
		public Compound_statementContext() { }
		public void copyFrom(Compound_statementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Compound_statement_2Context extends Compound_statementContext {
		public While_stmtContext while_stmt() {
			return getRuleContext(While_stmtContext.class,0);
		}
		public Compound_statement_2Context(Compound_statementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonVisitor ) return ((PythonVisitor<? extends T>)visitor).visitCompound_statement_2(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Compound_statement_3Context extends Compound_statementContext {
		public FuncdefContext funcdef() {
			return getRuleContext(FuncdefContext.class,0);
		}
		public Compound_statement_3Context(Compound_statementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonVisitor ) return ((PythonVisitor<? extends T>)visitor).visitCompound_statement_3(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Compound_statement_1Context extends Compound_statementContext {
		public If_stmtContext if_stmt() {
			return getRuleContext(If_stmtContext.class,0);
		}
		public Compound_statement_1Context(Compound_statementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonVisitor ) return ((PythonVisitor<? extends T>)visitor).visitCompound_statement_1(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Compound_statement_4Context extends Compound_statementContext {
		public ClassdefContext classdef() {
			return getRuleContext(ClassdefContext.class,0);
		}
		public Compound_statement_4Context(Compound_statementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonVisitor ) return ((PythonVisitor<? extends T>)visitor).visitCompound_statement_4(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Compound_statementContext compound_statement() throws RecognitionException {
		Compound_statementContext _localctx = new Compound_statementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_compound_statement);
		try {
			setState(103);
			switch (_input.LA(1)) {
			case IF:
				_localctx = new Compound_statement_1Context(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(99); if_stmt();
				}
				break;
			case WHILE:
				_localctx = new Compound_statement_2Context(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(100); while_stmt();
				}
				break;
			case DEF:
				_localctx = new Compound_statement_3Context(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(101); funcdef();
				}
				break;
			case CLASS:
				_localctx = new Compound_statement_4Context(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(102); classdef();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class If_stmtContext extends ParserRuleContext {
		public If_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_stmt; }
	 
		public If_stmtContext() { }
		public void copyFrom(If_stmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IfInstrContext extends If_stmtContext {
		public List<TerminalNode> ELIF() { return getTokens(PythonParser.ELIF); }
		public TerminalNode ELSE() { return getToken(PythonParser.ELSE, 0); }
		public TerminalNode IF() { return getToken(PythonParser.IF, 0); }
		public TerminalNode ELIF(int i) {
			return getToken(PythonParser.ELIF, i);
		}
		public SuiteContext suite(int i) {
			return getRuleContext(SuiteContext.class,i);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public List<SuiteContext> suite() {
			return getRuleContexts(SuiteContext.class);
		}
		public IfInstrContext(If_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonVisitor ) return ((PythonVisitor<? extends T>)visitor).visitIfInstr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final If_stmtContext if_stmt() throws RecognitionException {
		If_stmtContext _localctx = new If_stmtContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_if_stmt);
		int _la;
		try {
			_localctx = new IfInstrContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(105); match(IF);
			setState(106); expression(0);
			setState(107); match(T__15);
			setState(108); suite();
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ELIF) {
				{
				{
				setState(109); match(ELIF);
				setState(110); expression(0);
				setState(111); match(T__15);
				setState(112); suite();
				}
				}
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(122);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(119); match(ELSE);
				setState(120); match(T__15);
				setState(121); suite();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class While_stmtContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(PythonParser.WHILE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public SuiteContext suite() {
			return getRuleContext(SuiteContext.class,0);
		}
		public While_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_while_stmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonVisitor ) return ((PythonVisitor<? extends T>)visitor).visitWhile_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final While_stmtContext while_stmt() throws RecognitionException {
		While_stmtContext _localctx = new While_stmtContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_while_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124); match(WHILE);
			setState(125); expression(0);
			setState(126); match(T__15);
			setState(127); suite();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncdefContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PythonParser.ID, 0); }
		public Id_listContext id_list() {
			return getRuleContext(Id_listContext.class,0);
		}
		public TerminalNode DEF() { return getToken(PythonParser.DEF, 0); }
		public SuiteContext suite() {
			return getRuleContext(SuiteContext.class,0);
		}
		public FuncdefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcdef; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonVisitor ) return ((PythonVisitor<? extends T>)visitor).visitFuncdef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncdefContext funcdef() throws RecognitionException {
		FuncdefContext _localctx = new FuncdefContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_funcdef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129); match(DEF);
			setState(130); match(ID);
			setState(131); match(T__6);
			setState(132); id_list();
			setState(133); match(T__5);
			setState(134); match(T__15);
			setState(135); suite();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassdefContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PythonParser.ID, 0); }
		public Expr_listContext expr_list() {
			return getRuleContext(Expr_listContext.class,0);
		}
		public TerminalNode CLASS() { return getToken(PythonParser.CLASS, 0); }
		public SuiteContext suite() {
			return getRuleContext(SuiteContext.class,0);
		}
		public ClassdefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classdef; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonVisitor ) return ((PythonVisitor<? extends T>)visitor).visitClassdef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassdefContext classdef() throws RecognitionException {
		ClassdefContext _localctx = new ClassdefContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_classdef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137); match(CLASS);
			setState(138); match(ID);
			setState(146);
			_la = _input.LA(1);
			if (_la==T__6) {
				{
				setState(139); match(T__6);
				setState(140); expr_list();
				setState(142);
				_la = _input.LA(1);
				if (_la==T__2) {
					{
					setState(141); match(T__2);
					}
				}

				setState(144); match(T__5);
				}
			}
